--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,109 @@
-body {
+:root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.ic-container {
+  transition: all .4s;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: gray;
+  cursor: pointer;
+}
+
+.ic-container:hover {
+  transition: all .5s;
+  scale: 1.1;
+  color: black;
+}
+
+.ic-container>* {
+  height: 100%;
+  width: 100%;
+}
+
+.bottom-right {
+  z-index: 2;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+.chip {
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  padding: 8px;
+  height: 16px;
+  min-height: fit-content;
+}
+
+.text-chip {
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0px;
+  padding: 8px;
+  margin: 0px;
+  height: 16px;
+  min-height: fit-content;
+
+  * {
+    padding: 0;
+    margin: 0;
+
+  }
+}
+
+.profile-pic {
+  width: 8rem;
+  height: 8rem;
+  border-radius: 8rem;
+  background-color: rgba(230, 230, 230, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-text {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.profile-text>* {
+  margin: 0;
+}
+
+.profile-desc {
+  margin: 0;
+}
+
+.fade-in {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+}
+
+.fade-out {
+  transition: opacity 0.5s ease-in-out;
+  opacity: 0;
 }
