--- a/src/index.css
+++ b/src/index.css
@@ -19,17 +19,17 @@ body {
   justify-content: center;
   color: gray;
   cursor: pointer;
+
+  * {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .ic-container:hover {
   transition: all .5s;
   scale: 1.1;
   color: black;
-}
-
-.ic-container>* {
-  height: 100%;
-  width: 100%;
 }
 
 .bottom-right {
@@ -88,22 +88,17 @@ body {
   display: flex;
   flex-direction: column;
   gap: 8px;
-}
 
-.profile-text>* {
-  margin: 0;
+  * {
+    margin: 0;
+  }
 }
 
 .profile-desc {
   margin: 0;
-}
 
-.fade-in {
-  transition: opacity 0.5s ease-in-out;
-  opacity: 1;
-}
-
-.fade-out {
-  transition: opacity 0.5s ease-in-out;
-  opacity: 0;
+  * {
+    margin: 0;
+    padding: 0;
+  }
 }
