--- a/src/styles/bookshelf.css
+++ b/src/styles/bookshelf.css
@@ -11,11 +11,11 @@
   -moz-transition: -moz-transform 0.3s ease-in-out;
   -o-transition: -o-transform 0.3s ease-in-out;
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .image:first-child {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(8deg);
   -ms-transform: rotate(8deg);
   -webkit-transform: rotate(8deg);
@@ -23,7 +23,7 @@
 }
 
 .image:nth-child(2) {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(4deg);
   -ms-transform: rotate(4deg);
   -webkit-transform: rotate(4deg);
@@ -31,7 +31,7 @@
 }
 
 .image:last-child {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(0deg);
   -ms-transform: rotate(0deg);
   -webkit-transform: rotate(0deg);
@@ -40,7 +40,7 @@
 
 
 .images:hover .image:nth-child(2) {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(-4deg) translateX(-32px) translateY(4px);
   -ms-transform: rotate(-4deg) translateX(-32px) translateY(4px);
   -webkit-transform: rotate(-4deg) translateX(-32px) translateY(4px);
@@ -48,7 +48,7 @@
 }
 
 .images:hover .image:first-child {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(-8deg) translateX(-64px) translateY(8px);
   -ms-transform: rotate(-8deg) translateX(-64px) translateY(8px);
   -webkit-transform: rotate(-8deg) translateX(-64px) translateY(8px);
@@ -56,7 +56,7 @@
 }
 
 .image.slide-right {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(290deg) translateX(250px);
   -ms-transform: rotate(290deg) translateX(250px);
   -webkit-transform: rotate(290deg) translateX(250px);
@@ -64,7 +64,7 @@
 }
 
 .image.slide-left {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -moz-transform: rotate(-290deg) translateX(-250px);
   -ms-transform: rotate(-290deg) translateX(-250px);
   -webkit-transform: rotate(-290deg) translateX(-250px);
@@ -72,5 +72,7 @@
 }
 
 .image.back {
+  transition: all 0.3s ease-in-out;
+  opacity: 0;
   z-index: 1;
 }
