--- a/src/styles/bookshelf.css
+++ b/src/styles/bookshelf.css
@@ -12,6 +12,12 @@
   -o-transition: -o-transform 0.3s ease-in-out;
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  overflow: hidden;
+
+  img {
+    width: inherit;
+    height: inherit;
+  }
 }
 
 .image:first-child {
@@ -57,18 +63,10 @@
 
 .image.slide-right {
   transition: all 0.3s ease-in-out;
-  -moz-transform: translateX(128px);
-  -ms-transform: translateX(128px);
-  -webkit-transform: translateX(128px);
-  transform: translateX(128px);
-}
-
-.image.slide-left {
-  transition: all 0.3s ease-in-out;
-  -moz-transform: translateX(-128px);
-  -ms-transform: translateX(-128px);
-  -webkit-transform: translateX(-128px);
-  transform: translateX(-128px);
+  -moz-transform: translateX(140px);
+  -ms-transform: translateX(140px);
+  -webkit-transform: translateX(140px);
+  transform: translateX(140px);
 }
 
 .image.back {
