--- a/src/index.css
+++ b/src/index.css
@@ -216,3 +216,88 @@ body {
   transition: all 0.3s ease-in-out;
   opacity: 1;
 }
+
+.modal-screen {
+  background-color: rgba(255, 255, 255, 0.75);
+  backdrop-filter: blur(2px);
+  position: absolute;
+  z-index: 99;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.modal {
+  position: absolute;
+  height: 75vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+}
+
+.search-bar {
+  border-radius: 8px;
+  border: 1px dashed lightgray;
+  width: 100%;
+  overflow: hidden;
+
+  input {
+    gap: 8px;
+    padding: 4px 8px;
+    height: 16px;
+    min-height: fit-content;
+    color: gray;
+    display: flex;
+    align-items: center;
+    color: gray;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    padding: 8px;
+    width: 100%;
+  }
+}
+
+.books-list {
+  border: 1px solid lightgray;
+  background-color: white;
+  border-radius: 8px;
+  padding: 8px;
+  min-height: 128px;
+}
+
+.fav-books {
+  border-radius: 8px;
+  padding: 8px;
+  min-height: 128px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 16px;
+
+  div {
+    transition: all 0.3s ease-in-out;
+    height: 128px;
+    width: 86px;
+    border-radius: 2px 8px 8px 2px;
+    border-bottom-width: 15px;
+    -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+    -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+    box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+    overflow: hidden;
+
+    img {
+      height: inherit;
+      width: inherit;
+    }
+  }
+
+  div:hover {
+    transform: rotate(-8deg);
+  }
+}
