--- a/src/index.css
+++ b/src/index.css
@@ -226,15 +226,14 @@ body {
   backdrop-filter: blur(2px);
   position: fixed;
   z-index: 0;
-  min-height: 100vh;
-  height: fit-content;
+  height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-y: scroll;
   scroll-behavior: auto;
-  overflow-y: auto;
 }
 
 .modal-screen.visible {
@@ -244,8 +243,7 @@ body {
 .modal {
   position: absolute;
   height: fit-content;
-  min-height: 50vh;
-  height: fit-content;
+  top: 20%;
   width: 50vw;
   display: flex;
   flex-direction: column;
@@ -386,4 +384,8 @@ body {
 
 .book-result:hover {
   background-color: #F7F7F7;
+}
+
+.modal-open {
+  overflow: hidden;
 }
