--- a/src/index.css
+++ b/src/index.css
@@ -389,3 +389,26 @@ body {
 .modal-open {
   overflow: hidden;
 }
+
+.modal-message {
+  position: absolute;
+  z-index: 200;
+  background-color: rgb(222, 0, 0);
+  border: 0px solid red;
+  color: white;
+  width: 40vh;
+  min-height: 10vh;
+  height: fit-content;
+  visibility: hidden;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  padding: 16px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
