--- a/src/styles/moviesshowcase.css
+++ b/src/styles/moviesshowcase.css
@@ -1,7 +1,7 @@
 .poster {
   position: absolute;
-  height: 200px;
-  width: 136px;
+  height: 150px;
+  width: auto;
   border-radius: 4px;
   border-bottom-width: 15px;
   -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
