--- a/src/index.css
+++ b/src/index.css
@@ -354,10 +354,12 @@ body {
   }
 
   .movie {
-    padding: 8px 0;
+    transition: all 0.3s ease-in-out;
+    border-radius: 8px;
+    padding: 8px;
     display: flex;
     flex-direction: column;
-    width: 128px;
+    width: fit-content;
     text-align: center;
     align-items: center;
     gap: 8px;
@@ -391,7 +393,7 @@ body {
   }
 
   .movie:hover {
-    background-color: lightgray;
+    background-color: #F7F7F7;
   }
 }
 
