--- a/src/styles/bookshelf.css
+++ b/src/styles/bookshelf.css
@@ -2,7 +2,7 @@
   background-color: red;
   position: absolute;
   height: 200px;
-  width: auto;
+  width: 128px;
   border-radius: 2px 8px 8px 2px;
   border-bottom-width: 15px;
   -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
