--- a/src/styles/albumshelf.css
+++ b/src/styles/albumshelf.css
@@ -1,11 +1,10 @@
 .favAlbum {
   background-color: #F7F7F7;
-  border: 1px solid lightgray;
+  border: 0 solid lightgray;
   position: absolute;
   height: 200px;
   width: 200px;
   border-radius: 4px;
-  border-bottom-width: 15px;
   -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
   -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
   box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
