--- a/src/styles/albumshelf.css
+++ b/src/styles/albumshelf.css
@@ -41,7 +41,14 @@
   margin-right: 100px;
 }
 
-.favAlbum:last-child {}
+.favAlbum:last-child {
+  transition: all 0.3s ease-in-out;
+}
+
+.favAlbum:last-child:hover {
+  transition: all 0.3s ease-in-out;
+  transform: rotate(8deg);
+}
 
 
 .favAlbum:nth-child(2):hover {
@@ -64,12 +71,12 @@
   margin-right: 450px;
 }
 
-.favAlbum.slide-left {
+.favAlbum.slide-right {
   transition: all 0.3s ease-in-out;
-  -moz-transform: translateX(-72px);
-  -ms-transform: translateX(-72px);
-  -webkit-transform: translateX(-72px);
-  transform: translateX(-72px) scale(0.9);
+  -moz-transform: translateX(140px);
+  -ms-transform: translateX(140px);
+  -webkit-transform: translateX(140px);
+  transform: translateX(140px);
 }
 
 .favAlbum.back {
