--- a/src/styles/moviesshowcase.css
+++ b/src/styles/moviesshowcase.css
@@ -1,6 +1,6 @@
 .poster {
   position: absolute;
-  height: 200px;
+  height: 11vw;
   width: auto;
   border-radius: 4px;
   border-bottom-width: 15px;
