--- a/src/styles/moviesshowcase.css
+++ b/src/styles/moviesshowcase.css
@@ -22,13 +22,13 @@
 
 .poster:first-child {
   transition: all 0.3s ease-in-out;
-  margin-left: 64px;
+  margin-left: 5.5rem;
   scale: 0.6;
 }
 
 .poster:nth-child(2) {
   transition: all 0.3s ease-in-out;
-  margin-left: 32px;
+  margin-left: 3rem;
   scale: 0.8;
 }
 
@@ -37,13 +37,13 @@
 
 .posters:hover .poster:nth-child(2) {
   transition: all 0.3s ease-in-out;
-  margin-left: 64px;
+  margin-left: 5rem;
   scale: 0.9;
 }
 
 .posters:hover .poster:first-child {
   transition: all 0.3s ease-in-out;
-  margin-left: 128px;
+  margin-left: 9rem;
   scale: 0.7;
 }
 
