--- a/src/styles/albumshelf.css
+++ b/src/styles/albumshelf.css
@@ -5,9 +5,9 @@
   height: 10vw;
   width: 10vw;
   border-radius: 4px;
-  -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-  -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-  box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+  -moz-box-shadow: -5px 0 5px -5px rgba(30, 30, 30, 0.25);
+  -webkit-box-shadow: -5px 0 5px -5px rgba(30, 30, 30, 0.25);
+  box-shadow: -10px 0px 10px -5px rgba(30, 30, 30, 0.25);
   z-index: 2;
   -moz-transition: -moz-transform 0.3s ease-in-out;
   -o-transition: -o-transform 0.3s ease-in-out;
@@ -91,4 +91,5 @@
   min-width: 100%;
   display: flex;
   justify-content: flex-end;
+  height: 10vw;
 }
